# rs-utils

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  log.rs  types.rs
src/log/: cat.rs  log4rs.rs  mod.rs
src/macros/: extra.rs  mod.rs  py.rs
