[package]
name = "rsutil"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
authors = ["Jesse Smith <jesses2025smith@gmail.com>"]
description = "`rsutil` is a Rust library providing common utilities."
homepage = "https://github.com/jesses2025smith/rs-utils"
repository = "https://github.com/jesses2025smith/rs-utils"

[features]
log = []
macros = []
py = []
types = []

full = ["log", "macros", "py", "types"]

[dev-dependencies]
log = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
