[package]
name = "rsutil"
version = "0.1.20"
edition = "2021"
license = "Apache-2.0"
authors = ["Jesse Smith <jesses2025smith@gmail.com>"]
description = "`rsutil` is a Rust library providing common utilities."
homepage = "https://github.com/jesses2025smith/rs-utils"
repository = "https://github.com/jesses2025smith/rs-utils"

[features]
default = ["full"]
log = []
log-lineno = ["log"]
log4rs = ["chrono", "log", "dep:log", "dep:log4rs"]
macros = []
py = []
types = ["serde"]

full = ["log", "log4rs", "macros", "py", "types"]

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.log]
version = "0.4"
optional = true

[dependencies.log4rs]
version = "1"
optional = true

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dev-dependencies]
log = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints.rust]
unused_imports = "deny"
unused_results = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
